Changing camera orthographic scale moves background image #73847

Closed
opened 2020-02-15 17:58:14 +01:00 by Cirno · 6 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4

Short description of error
If I have a camera set to orthographic type and have a background with offset, then changing the orthographic scale moves the background.
Moreover, the background position in the scene opened in 2.82 doesn't match with the background position in the scene opened in 2.81

Exact steps for others to reproduce the error

  1. Add a camera, add a background image to the camera, set the camera type to orthographic
  2. Add some offset to the background image, open the camera view and try changing the orthographic scale
  3. You will see that background will not remain in the same position
  4. If you open the same scene in the previous blender version, then you will see that the background position is different and changing the orthographic scale will not change the background position

OrthographicScale.blend

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GT 730/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` **Short description of error** If I have a camera set to orthographic type and have a background with offset, then changing the orthographic scale moves the background. Moreover, the background position in the scene opened in 2.82 doesn't match with the background position in the scene opened in 2.81 **Exact steps for others to reproduce the error** 1. Add a camera, add a background image to the camera, set the camera type to orthographic 2. Add some offset to the background image, open the camera view and try changing the orthographic scale 3. You will see that background will not remain in the same position 4. If you open the same scene in the previous blender version, then you will see that the background position is different and changing the orthographic scale will not change the background position [OrthographicScale.blend](https://archive.blender.org/developer/F8341469/OrthographicScale.blend)
Author

Added subscriber: @Lambdadelta

Added subscriber: @Lambdadelta

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @fclem, @dfelinto

Added subscribers: @fclem, @dfelinto
Clément Foucault was assigned by Dalai Felinto 2020-05-18 17:08:49 +02:00

I couldn't bisect this due to building errors here, but I suspect the issue was introduced in the overlay refactor.
@fclem asked to take over, so assigning it to him.

I couldn't bisect this due to building errors here, but I suspect the issue was introduced in the overlay refactor. @fclem asked to take over, so assigning it to him.
Dalai Felinto changed title from Changing camera orthographic scale moves background image. Background image position doesn't match with scene opened in previous blender version to Changing camera orthographic scale moves background image 2020-05-18 17:15:45 +02:00

This issue was referenced by a4cbacacbf

This issue was referenced by a4cbacacbf8e32038e77e567a29716ede5b5db0a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73847
No description provided.