Fix T73847 Overlay: Camera orthographic scale moves background image